--- a/index.html
+++ b/index.html
@@ -2,132 +2,175 @@
     <head>
         <title>Bash Prompt Builder - Andrewray.me</title>
         <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools-yui-compressed.js" type="text/javascript"></script>
+        <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
         <script src="builder.js" type="text/javascript"></script>
         <link type="text/css" rel="stylesheet" href="builder.css" />
     </head>
     <body>
+        <div class="header">
+            <h1>Bash Prompt Builder</h1>
+        </div>
+        <div id="options">
+            <label for="git">Git</label>
+            <input type="checkbox" value="git" id="git" />
+            <label for="hg">Mercurial</label>
+            <input type="checkbox" value="hg" id="hg" />
+            <label for="svn">Subversion</label>
+            <input type="checkbox" value="svn" id="svn" />
+        </div>
+        <div class="display">
+        </div>
+        <div id="function">
+dvcs_function="
+    # Figure out what repo we are in
 
-    DELTA_CHAR="༇"
-    #DELTA_CHAR="△"
-
-    #CONFLICT_CHAR="☠"
-    CONFLICT_CHAR="௰"
-
-    # Requirements (other than git, svn and hg):
-    #   hg-prompt: https://bitbucket.org/sjl/hg-prompt/src
-    #   ack
-    # props to http://www.codeography.com/2009/05/26/speedy-bash-prompt-git-and-subversion-integration.html
-
-    # Colors for prompt
-    COLOR_RED=$(tput sgr0 && tput setaf 1)
-    COLOR_GREEN=$(tput sgr0 && tput setaf 2)
-    COLOR_YELLOW=$(tput sgr0 && tput setaf 3)
-    COLOR_BLUE=$(tput sgr0 && tput setaf 6)
-    COLOR_PURPLE=$(tput sgr0 && tput setaf 5)
-    COLOR_LIGHT_GREEN=$(tput sgr0 && tput bold && tput setaf 2)
-    COLOR_LIGHT_RED=$(tput sgr0 && tput bold && tput setaf 1)
-    COLOR_LIGHT_CYAN=$(tput sgr0 && tput bold && tput setaf 6)
-    COLOR_RESET=$(tput sgr0)
-
-    dvcs_function="
-        # Figure out what repo we are in
+    # :git
         gitBranch=\"\"
+    # /git
+
+    # :svn
         svnInfo=\"\"
+    # /svn
+
+    # :hg
         hgBranch=\$(hg prompt \"{branch}\" 2> /dev/null)
 
         # Done for speed reasons. Feel free to swap
         if [[ \"\$hgBranch\" == \"\" ]]; then
-            gitBranch=\$(git symbolic-ref HEAD 2> /dev/null)
+    # /hg
+    # :git
+        gitBranch=\$(git symbolic-ref HEAD 2> /dev/null)
 
-            # Svn?
-            if [[ \"\$gitBranch\" == \"\" ]]; then
-                svnInfo=\$(svn info 2> /dev/null)
-            fi
+        if [[ \"\$gitBranch\" == \"\" ]]; then
+    # /git
+    # :svn
+        # Svn?
+        svnInfo=\$(svn info 2> /dev/null)
+    # /svn
+
+    # :git
         fi
+    # /git
+    # :hg
+        fi
+    # /hg
 
-        # Build the prompt!
-        prompt=\"\"
+    # Build the prompt!
+    prompt=\"\"
+
+    # :conflict
         files=\"\"
+    # /conflict
 
-        # If we are in git ...
+    # If we are in git ...
+    # :git
         if [[ \"\$gitBranch\" != \"\" ]]; then
             # find current branch
             gitStatus=\$(git status)
 
-            # changed *tracked* files in local directory?
-            gitChange=\$(echo \$gitStatus | ack 'modified:|deleted:|new file:')
-            if [[ \"\$gitChange\" != \"\" ]]; then
-                gitChange=\" \\[`tput sc`\\]  \\[`tput rc`\\]\\[\$DELTA_CHAR\\] \"
-            fi
+            # :git-modified
+                # changed *tracked* files in local directory?
+                gitChange=\$(echo \$gitStatus | ack 'modified:|deleted:|new file:')
+                if [[ \"\$gitChange\" != \"\" ]]; then
+                    gitChange=\" \\[`tput sc`\\]  \\[`tput rc`\\]\\[\$DELTA_CHAR\\] \"
+                fi
+            # :else
+                gitChange=\"\"
+            # /git-modified
 
-            # output the branch and changed character if present
-            prompt=\$prompt\"\\[\$COLOR_YELLOW\\] (\"\${gitBranch#refs/heads/}\"\$gitChange)\\[\$COLOR_RESET\\]\"
+            # :git-branch
+                # output the branch and changed character if present
+                prompt=\$prompt\"\\[\$COLOR_YELLOW\\] (\"\${gitBranch#refs/heads/}\"\$gitChange)\\[\$COLOR_RESET\\]\"
+            # /git-branch
 
-            # How many local commits do you have ahead of origin?
-            num=\$(echo \"\$gitStatus\" | grep \"Your branch is ahead of\" | awk '{split(\$0,a,\" \"); print a[9];}') || return
-            if [[ \"\$num\" != \"\" ]]; then
-                prompt=\$prompt\"\\[\$COLOR_LIGHT_CYAN\\] +\$num\"
-            fi
+            # :git-ahead
+                # How many local commits do you have ahead of origin?
+                num=\$(echo \"\$gitStatus\" | grep \"Your branch is ahead of\" | awk '{split(\$0,a,\" \"); print a[9];}') || return
+                if [[ \"\$num\" != \"\" ]]; then
+                    prompt=\$prompt\"\\[\$COLOR_LIGHT_CYAN\\] +\$num\"
+                fi
+            # /git-ahead
 
-            # any conflicts? (sed madness is to remove line breaks)
-            files=\$(git ls-files -u | cut -f 2 | sort -u | sed -e :a -e '\$!N;s/\\\n/, /;ta' -e 'P;D')
+            # :conflicts
+                # any conflicts? (sed madness is to remove line breaks)
+                files=\$(git ls-files -u | cut -f 2 | sort -u | sed -e :a -e '\$!N;s/\\\n/, /;ta' -e 'P;D')
+            # /conflicts
         fi
+    # /git
 
-        # If we are in mercurial ...
+    # If we are in mercurial ...
+    # :hg
         if [[ \"\$hgBranch\" != \"\" ]]; then
-            # changed files in local directory?
-            hgChange=\$(hg status | ack '^M|^!')
-            if [[ \"\$hgChange\" != \"\" ]]; then
-                hgChange=\" \\[`tput sc`\\]  \\[`tput rc`\\]\\[\$DELTA_CHAR\\] \"
-            else
+
+            # :hg-modified
+                # changed files in local directory?
+                hgChange=\$(hg status | ack '^M|^!')
+                if [[ \"\$hgChange\" != \"\" ]]; then
+                    hgChange=\" \\[`tput sc`\\]  \\[`tput rc`\\]\\[\$DELTA_CHAR\\] \"
+                else
+                    hgChange=\"\"
+                fi
+            # :else
                 hgChange=\"\"
-            fi
+            # /hg-modified
 
-            # output branch and changed character if present
-            prompt=\$prompt\"\\[\$COLOR_PURPLE\\] (\${hgBranch}\$hgChange)\"
+            # :hg-branch
+                # output branch and changed character if present
+                prompt=\$prompt\"\\[\$COLOR_PURPLE\\] (\${hgBranch}\$hgChange)\"
 
-            # I guess we don't want this (better version?)
-            #num=\$(hg summary | grep \"update:\" | wc -l | sed -e 's/^ *//')
-            #if [[ \"\$num\" != \"\" ]]; then
-                #prompt=\$prompt\"\\[\$COLOR_LIGHT_CYAN\\] +\$num\"
-            #fi
+                # I guess we don't want this (better version?)
+                #num=\$(hg summary | grep \"update:\" | wc -l | sed -e 's/^ *//')
+                #if [[ \"\$num\" != \"\" ]]; then
+                    #prompt=\$prompt\"\\[\$COLOR_LIGHT_CYAN\\] +\$num\"
+                #fi
+            # /hg-branch
 
+            # :conflicts
             # Conflicts?
-            files=\$(hg resolve -l | grep \"U \" | awk '{split(\$0,a,\" \"); print a[2];}') || return
+                files=\$(hg resolve -l | grep \"U \" | awk '{split(\$0,a,\" \"); print a[2];}') || return
+            # /conflicts
         fi
+    # /hg
 
+    # :svn
         # If we are in subversion ...
         if [[ \"\$svnInfo\" != \"\" ]]; then
 
-            # changed files in local directory? NOTE: This command is the slowest of the bunch
-            svnChange=\$(svn status | ack \"^M|^!\" | wc -l)
-            if [[ \"\$svnChange\" != \"       0\" ]]; then
-                svnChange=\" \\[`tput sc`\\]  \\[`tput rc`\\]\\[\$DELTA_CHAR\\] \"
-            else
-                svnChange=\"\"
-            fi
+            # :svn-changed
+                # changed files in local directory? NOTE: This command is the slowest of the bunch
+                svnChange=\$(svn status | ack \"^M|^!\" | wc -l)
+                if [[ \"\$svnChange\" != \"       0\" ]]; then
+                    svnChange=\" \\[`tput sc`\\]  \\[`tput rc`\\]\\[\$DELTA_CHAR\\] \"
+                else
+                    svnChange=\"\"
+                fi
+            # /svn-changed
 
             # revision number (instead of branch name, silly svn)
             revNo=\$(echo \"\$svnInfo\" | sed -n -e '/^Revision: \([0-9]*\).*\$/s//\1/p')
             prompt=\$prompt\"\\[\$COLOR_BLUE\\] (svn:\$revNo\$svnChange)\\[\$COLOR_RESET\\]\"
         fi
+    # /svn
 
+    # :conflicts
         # Show conflicted files if any
         if [[ \"\$files\" != \"\" ]]; then
             prompt=\$prompt\" \\[\$COLOR_RED\\](\\[\$COLOR_YELLOW\\]\"
             prompt=\$prompt\"\\[`tput sc`\\]  \\[`tput rc`\\]\\[\$CONFLICT_CHAR\\] \"
             prompt=\$prompt\"\\[\$COLOR_RED\\]\${files})\"
         fi
+    # /conflicts
 
-        echo -e \$prompt"
+    echo -e \$prompt"
+        </div>
 
-    function error_test() {
-        if [[ $? = "0" ]]; then
-            printf "$COLOR_LIGHT_GREEN"
-        else
-            printf "$COLOR_LIGHT_RED"
-        fi
-    }
+        function error_test() {
+            if [[ $? = "0" ]]; then
+                printf "$COLOR_LIGHT_GREEN"
+            else
+                printf "$COLOR_LIGHT_RED"
+            fi
+        }
 
     PS1="\n\[$COLOR_YELLOW\]\u\[\$(error_test)\]@\[$COLOR_GREEN\]\w\$(${dvcs_function})\[$COLOR_RESET\] \$ "
     </body>
