--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Bash Prompt Builder - Andrewray.me</title>
         <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools-yui-compressed.js" type="text/javascript"></script>
         <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
@@ -12,13 +14,39 @@
         </div>
         <div id="options">
             <label for="git">Git</label>
-            <input type="checkbox" value="git" id="git" />
+            <input type="checkbox" value="git" id="git" checked="checked" />
+
             <label for="hg">Mercurial</label>
-            <input type="checkbox" value="hg" id="hg" />
+            <input type="checkbox" value="hg" id="hg" checked="checked" />
+
             <label for="svn">Subversion</label>
-            <input type="checkbox" value="svn" id="svn" />
+            <input type="checkbox" value="svn" id="svn" checked="checked" />
+
+            <label for="git-modified">Git Modified</label>
+            <input type="checkbox" value="git-modified" id="git-modified" checked="checked" />
+
+            <label for="git-conflicted">Git Conflicted</label>
+            <input type="checkbox" value="git-conflicted" id="git-conflicted" checked="checked" />
+
+            <label for="hg-conflicted">Mercurial Conflicted</label>
+            <input type="checkbox" value="hg-conflicted" id="hg-conflicted" checked="checked" />
         </div>
         <div class="display">
+
+            <label for="git-display">Git</label>
+            <div class="git" id="git-display">
+                <span class="git-branch">(master <span class="delta-char">༇</span>)</span><span class="git-modified"> +1</span><span class="git-conflicted"> (<span class="conflict-char">௰</span> index.js, package.json)</span> $ 
+            </div>
+
+            <label for="hg-display">Mercurial</label>
+            <div class="hg" id="hg-display">
+                <span class="hg-branch">(master <span class="delta-char">༇</span>)</span><span class="hg-conflicted"> (<span class="conflict-char">௰</span> index.js, package.json)</span> $ 
+            </div>
+            
+            <label for="svn-display">Subversion</label>
+            <div class="svn" id="svn-display">
+                <span class="svn-branch">(master <span class="delta-char">༇</span>)</span> $ 
+            </div>
         </div>
         <div id="function">
 dvcs_function="
@@ -62,8 +90,8 @@ dvcs_function="
         files=\"\"
     # /conflict
 
-    # If we are in git ...
     # :git
+        # If we are in git ...
         if [[ \"\$gitBranch\" != \"\" ]]; then
             # find current branch
             gitStatus=\$(git status)
