--- a/index.html
+++ b/index.html
@@ -5,59 +5,77 @@
         <title>Bash Prompt Builder - Andrewray.me</title>
         <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools-yui-compressed.js" type="text/javascript"></script>
         <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
+        <script src="noisy.js" type="text/javascript"></script>
         <script src="builder.js" type="text/javascript"></script>
         <link type="text/css" rel="stylesheet" href="builder.css" />
     </head>
     <body>
-        <div class="header">
-            <h1>Bash Prompt Builder</h1>
-        </div>
-        <div id="options">
-            <label for="git">Git</label>
-            <input type="checkbox" value="git" id="git" checked="checked" />
-
-            <label for="hg">Mercurial</label>
-            <input type="checkbox" value="hg" id="hg" checked="checked" />
-
-            <label for="svn">Subversion</label>
-            <input type="checkbox" value="svn" id="svn" checked="checked" />
-
-            <label for="git-ahead">Git Ahead</label>
-            <input type="checkbox" value="git-ahead" id="git-ahead" checked="checked" />
-
-            <label for="git-modified">Git Modified</label>
-            <input type="checkbox" value="git-modified" id="git-modified" checked="checked" />
-
-            <label for="hg-modified">Mercurial Modified</label>
-            <input type="checkbox" value="hg-modified" id="hg-modified" checked="checked" />
-
-            <label for="svn-modified">Subversion Modified</label>
-            <input type="checkbox" value="svn-modified" id="svn-modified" checked="checked" />
-
-            <label for="git-conflicted">Git Conflicted</label>
-            <input type="checkbox" value="git-conflicted" id="git-conflicted" checked="checked" />
-
-            <label for="hg-conflicted">Mercurial Conflicted</label>
-            <input type="checkbox" value="hg-conflicted" id="hg-conflicted" checked="checked" />
-        </div>
-        <div class="display">
-
-            <label for="git-display">Git</label>
-            <div class="git" id="git-display">
-                <span class="git-branch">(master<span class="delta-char git-modified"> ༇</span>)</span><span class="git-ahead"> +1</span><span class="git-conflicted"> (<span class="conflict-char">௰</span> index.js, package.json)</span> $ 
+        <div class="wrap">
+            <div class="section header">
+                <h1>Bash Prompt Builder</h1>
             </div>
 
-            <label for="hg-display">Mercurial</label>
-            <div class="hg" id="hg-display">
-                <span class="hg-branch">(master<span class="delta-char hg-modified"> ༇</span>)</span><span class="hg-conflicted"> (<span class="conflict-char">௰</span> index.js, package.json)</span> $ 
+            <div class="section" id="options">
+                <div class="config config-git">
+                    <label for="git">Git</label>
+                    <input type="checkbox" value="git" id="git" data-toggle="git-ahead git-modified git-conflicted" checked="checked" />
+
+                    <div class="options">
+                        <label for="git-ahead">Git Ahead</label>
+                        <input type="checkbox" value="git-ahead" id="git-ahead" checked="checked" />
+
+                        <label for="git-modified">Git Modified</label>
+                        <input type="checkbox" value="git-modified" id="git-modified" checked="checked" />
+
+                        <label for="git-conflicted">Git Conflicted</label>
+                        <input type="checkbox" value="git-conflicted" id="git-conflicted" checked="checked" />
+                    </div>
+                </div>
+
+                <div class="config config-git">
+                    <label for="hg">Mercurial</label>
+                    <input type="checkbox" value="hg" id="hg" checked="checked" />
+
+                    <div class="options">
+                        <label for="hg-modified">Mercurial Modified</label>
+                        <input type="checkbox" value="hg-modified" id="hg-modified" checked="checked" />
+
+                        <label for="hg-conflicted">Mercurial Conflicted</label>
+                        <input type="checkbox" value="hg-conflicted" id="hg-conflicted" checked="checked" />
+                    </div>
+                </div>
+
+                <div class="config config-git">
+                    <label for="svn">Subversion</label>
+                    <input type="checkbox" value="svn" id="svn" checked="checked" />
+
+                    <div class="options">
+                        <label for="svn-modified">Subversion Modified</label>
+                        <input type="checkbox" value="svn-modified" id="svn-modified" checked="checked" />
+                    </div>
+                </div>
             </div>
-            
-            <label for="svn-display">Subversion</label>
-            <div class="svn" id="svn-display">
-                <span class="svn-branch">(svn:revno<span class="delta-char svn-modified"> ༇</span>)</span> $ 
+
+            <div class="section display">
+
+                <label for="git-display">Git</label>
+                <div class="git" id="git-display">
+                    <span class="git-branch">(master<span class="delta-char git-modified"> ༇</span>)</span><span class="git-ahead"> +1</span><span class="git-conflicted"> (<span class="conflict-char">௰</span> index.js, package.json)</span> $ 
+                </div>
+
+                <label for="hg-display">Mercurial</label>
+                <div class="hg" id="hg-display">
+                    <span class="hg-branch">(master<span class="delta-char hg-modified"> ༇</span>)</span><span class="hg-conflicted"> (<span class="conflict-char">௰</span> index.js, package.json)</span> $ 
+                </div>
+                
+                <label for="svn-display">Subversion</label>
+                <div class="svn" id="svn-display">
+                    <span class="svn-branch">(svn:revno<span class="delta-char svn-modified"> ༇</span>)</span> $ 
+                </div>
             </div>
-        </div>
-        <div id="function">
+
+            <div class="section">
+                <div id="function">
 dvcs_function="
     # Figure out what repo we are in
 
@@ -206,5 +224,7 @@ dvcs_function="
         }
 
     PS1="\n\[$COLOR_YELLOW\]\u\[\$(error_test)\]@\[$COLOR_GREEN\]\w\$(${dvcs_function})\[$COLOR_RESET\] \$ "
+        </div>
+        </div>
     </body>
 </html>
