--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Bash Prompt Builder - Andrewray.me</title>
         <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools-yui-compressed.js" type="text/javascript"></script>
         <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
-        <script src="noisy.js" type="text/javascript"></script>
+        <script src="mootools.noisy.min.js" type="text/javascript"></script>
         <script src="builder.js" type="text/javascript"></script>
         <link type="text/css" rel="stylesheet" href="builder.css" />
     </head>
