--- a/index.html
+++ b/index.html
@@ -6,56 +6,90 @@
         <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools-yui-compressed.js" type="text/javascript"></script>
         <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
         <script src="mootools.noisy.min.js" type="text/javascript"></script>
+        <script src="FunForms.js" type="text/javascript"></script>
+        <link type="text/css" rel="stylesheet" href="FunForms.css" />
         <script src="builder.js" type="text/javascript"></script>
         <link type="text/css" rel="stylesheet" href="builder.css" />
     </head>
     <body>
         <div class="wrap">
-            <div class="section header">
+            <div class="header">
                 <h1>Bash Prompt Builder</h1>
             </div>
 
+            <h2>Options</h2>
             <div class="section" id="options">
                 <div class="config config-git">
-                    <label for="git">Git</label>
-                    <input type="checkbox" value="git" id="git" data-toggle="git-ahead git-modified git-conflicted" checked="checked" />
+                    <div class="group">
+                        <input type="checkbox" value="git" id="git" data-toggle="git-ahead git-modified git-conflicted" checked="checked" />
+                        <label for="git">Git</label>
+                    </div>
 
                     <div class="options">
-                        <label for="git-ahead">Git Ahead</label>
-                        <input type="checkbox" value="git-ahead" id="git-ahead" checked="checked" />
+                        <div class="group">
+                            <input type="checkbox" value="git-ahead" id="git-ahead" checked="checked" />
+                            <label for="git-ahead">Git Ahead</label>
+                        </div>
 
-                        <label for="git-modified">Git Modified</label>
-                        <input type="checkbox" value="git-modified" id="git-modified" checked="checked" />
+                        <div class="group">
+                            <input type="checkbox" value="git-modified" id="git-modified" checked="checked" />
+                            <label for="git-modified">Git Modified</label>
+                        </div>
 
-                        <label for="git-conflicted">Git Conflicted</label>
-                        <input type="checkbox" value="git-conflicted" id="git-conflicted" checked="checked" />
+                        <div class="group">
+                            <input type="checkbox" value="git-conflicted" id="git-conflicted" checked="checked" />
+                            <label for="git-conflicted">Git Conflicted</label>
+                        </div>
                     </div>
                 </div>
 
                 <div class="config config-git">
-                    <label for="hg">Mercurial</label>
-                    <input type="checkbox" value="hg" id="hg" checked="checked" />
+                    <div class="group">
+                        <input type="checkbox" value="hg" id="hg" data-toggle="hg-modified hg-conflicted" checked="checked" />
+                        <label for="hg">Mercurial</label>
+                    </div>
 
                     <div class="options">
-                        <label for="hg-modified">Mercurial Modified</label>
-                        <input type="checkbox" value="hg-modified" id="hg-modified" checked="checked" />
+                        <div class="group">
+                            <input type="checkbox" value="hg-modified" id="hg-modified" checked="checked" />
+                            <label for="hg-modified">Mercurial Modified</label>
+                        </div>
 
-                        <label for="hg-conflicted">Mercurial Conflicted</label>
-                        <input type="checkbox" value="hg-conflicted" id="hg-conflicted" checked="checked" />
+                        <div class="group">
+                            <input type="checkbox" value="hg-conflicted" id="hg-conflicted" checked="checked" />
+                            <label for="hg-conflicted">Mercurial Conflicted</label>
+                        </div>
                     </div>
                 </div>
 
                 <div class="config config-git">
-                    <label for="svn">Subversion</label>
-                    <input type="checkbox" value="svn" id="svn" checked="checked" />
+                    <div class="group">
+                        <input type="checkbox" value="svn" id="svn" data-toggle="svn-modified" checked="checked" />
+                        <label for="svn">Subversion</label>
+                    </div>
 
                     <div class="options">
-                        <label for="svn-modified">Subversion Modified</label>
-                        <input type="checkbox" value="svn-modified" id="svn-modified" checked="checked" />
+                        <div class="group">
+                            <input type="checkbox" value="svn-modified" id="svn-modified" checked="checked" />
+                            <label for="svn-modified">Subversion Modified</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="config characters">
+                    <div class="group">
+                        <label for="modified-char">Modified Character</label>
+                        <input type="text" value="༇" />
+                    </div>
+
+                    <div class="group">
+                        <label for="conflict-char">Conflict Character</label>
+                        <input type="text" value="௰" />
                     </div>
                 </div>
             </div>
 
+            <h2>Preview</h2>
             <div class="section display">
 
                 <label for="git-display">Git</label>
@@ -74,6 +108,7 @@
                 </div>
             </div>
 
+            <h2>Code</h2>
             <div class="section">
                 <div id="function">
 dvcs_function="
