hiding labels for displays

--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
             <h2 id="preview">Preview</h2>
             <div class="section display">
 
-                <label for="git-display">Git</label>
+                <label for="git-display" class="git">Git</label>
                 <div class="git" id="git-display">
                     <span class="git-branch">(master<span class="delta-char git-modified"> ༇</span>)</span><span class="git-ahead"> +1</span><span class="git-conflicted"> (<span class="conflict-char">௰</span> index.js, package.json)</span> $ 
                 </div>
 
-                <label for="hg-display">Mercurial</label>
+                <label for="hg-display" class="hg">Mercurial</label>
                 <div class="hg" id="hg-display">
                     <span class="hg-branch">(master<span class="delta-char hg-modified"> ༇</span>)</span><span class="hg-conflicted"> (<span class="conflict-char">௰</span> index.js, package.json)</span> $ 
                 </div>
                 
-                <label for="svn-display">Subversion</label>
+                <label for="svn-display" class="svn">Subversion</label>
                 <div class="svn" id="svn-display">
                     <span class="svn-branch">(svn:revno<span class="delta-char svn-modified"> ༇</span>)</span> $ 
                 </div>
