shit tons of styles

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <h2>Code</h2>
-            <div class="section">
+            <div class="section" id="code">
                 <div id="function">
 dvcs_function="
     # Figure out what repo we are in
