some readme stuff

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#preview">Preview</a></li>
                 <li><a href="#nav-code">Code</a></li>
                 <li><a href="#what">What is this I don't even</a></li>
+                <li><a href="#contact">Contact and Contribute</a></li>
             </ul>
 
             <h2 id="nav-options">Options</h2>
@@ -305,8 +306,22 @@ dvcs_function="
             </div>
 
         </div>
+
         <h2 id="what">What is this I don't even</h2>
         <div class="section what">
+        </div>
+
+        <h2 id="contact">Contact and Contribute</h2>
+        <div class="section">
+            <h4>Contributing:</h4>
+            <p>Do you have ideas for other VCS display options? Do you want to add support for a different VCS? All the rules for contributing can be found in the README of <a href="https://github.com/DelvarWorld/Bash-Prompt-Builder" rel="me" target="_blank">the GitHub page for this website</a>.</p>
+
+            <h4>Links:</h4>
+            <ul>
+                <li>Check out the <a href="http://andrewray.me/">homepage</a>.</li>
+                <li>Visit my <a href="https://github.com/DelvarWorld">GitHub page</a>.</li>
+                <li>Follow me on <a href="http://twitter.com/andrewray">Twitter</a>.</li>
+            </ul>
         </div>
         </div>
     </body>
