more CSS tweaks. maybe I should actually make this thing work now?

--- a/index.html
+++ b/index.html
@@ -322,7 +322,12 @@ dvcs_function="
                 <li>Visit my <a href="https://github.com/DelvarWorld">GitHub page</a>.</li>
                 <li>Follow me on <a href="http://twitter.com/andrewray">Twitter</a>.</li>
             </ul>
+
+            <div class="footer">
+                Page made by <a href="http://andrewray.me/">Andrew Ray</a> using entirely HTML and CSS, and <a href="http://mootools.net" target="_blank">MooTools</a>
+            </div>
         </div>
         </div>
+
     </body>
 </html>
