--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Bash Prompt Builder - Andrewray.me</title>
+        <title>Bash Prompt Builder - AndrewRay.me</title>
         <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools-yui-compressed.js" type="text/javascript"></script>
         <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
         <script src="mootools.noisy.min.js" type="text/javascript"></script>
@@ -16,9 +16,9 @@
             <a href="https://github.com/DelvarWorld/Bash-Prompt-Builder" rel="me" target="_blank">Fork me on GitHub!</a>
         </div>
         <div class="wrap">
-            <div class="header">
+            <header>
                 <h1>Bash Prompt Builder</h1>
-            </div>
+            </header>
 
             <ul class="nav">
                 <li>Explore:</li>
@@ -30,7 +30,7 @@
             </ul>
 
             <h2 id="nav-options">Options</h2>
-            <div class="section" id="options">
+            <section id="options">
                 <div class="wtf">
                     <div id="placeholder">Hover over an option to see its description here</div>
                     <label id="wtf-label" for="wtf">What the merry-go-round does this option do?</label>
@@ -97,12 +97,12 @@
                 <div class="config characters">
                     <div class="group">
                         <label for="modified-char">Modified Character</label>
-                        <input type="text" value="༇" />
+                        <input type="text" value="༇" id="modified-char" />
                     </div>
 
                     <div class="group">
                         <label for="conflict-char">Conflict Character</label>
-                        <input type="text" value="௰" />
+                        <input type="text" value="௰" id="conflict-char" />
                     </div>
 
                     <div class="group">
@@ -110,10 +110,10 @@
                         <input type="text" value="2" />
                     </div>
                 </div>
-            </div>
+            </section>
 
             <h2 id="preview">Preview</h2>
-            <div class="section display">
+            <section class="display">
 
                 <label for="git-display" class="git">Git</label>
                 <div class="git" id="git-display">
@@ -129,10 +129,10 @@
                 <div class="svn" id="svn-display">
                     <span class="svn-branch">(svn:revno<span class="delta-char svn-modified"> ༇</span>)</span> $ 
                 </div>
-            </div>
+            </section>
 
             <h2 id="nav-code">Code</h2>
-            <div class="section" id="code">
+            <section id="code">
                 <div id="function">
 # Requirements (other than git, svn and hg):
 #   hg-prompt: https://bitbucket.org/sjl/hg-prompt/src
@@ -305,14 +305,15 @@ dvcs_function="
     PS1="\$(${dvcs_function})\[$COLOR_RESET\] \$ "
             </div>
 
-        </div>
+        </section>
 
         <h2 id="what">What is this I don't even</h2>
-        <div class="section what">
-        </div>
+        <section class="what">
+            <p>This is a website for customizing your bash prompt with</p>
+        </section>
 
         <h2 id="contact">Contact and Contribute</h2>
-        <div class="section">
+        <section>
             <h4>Contributing:</h4>
             <p>Do you have ideas for other VCS display options? Do you want to add support for a different VCS? All the rules for contributing can be found in the README of <a href="https://github.com/DelvarWorld/Bash-Prompt-Builder" rel="me" target="_blank">the GitHub page for this website</a>.</p>
 
@@ -323,11 +324,23 @@ dvcs_function="
                 <li>Follow me on <a href="http://twitter.com/andrewray">Twitter</a>.</li>
             </ul>
 
-            <div class="footer">
+            <footer>
                 Page made by <a href="http://andrewray.me/">Andrew Ray</a> using entirely HTML and CSS, and <a href="http://mootools.net" target="_blank">MooTools</a>
-            </div>
+            </footer>
         </div>
         </div>
 
+        <div class="fun-picker" id="modified-picker">
+            <ul>
+                <li>a</li>
+                <li>x</li>
+            </ul>
+        </div>
+        <div class="fun-picker" id="conflict-picker">
+            <ul>
+                <li>a</li>
+                <li>x</li>
+            </ul>
+        </div>
     </body>
 </html>
