--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <link type="text/css" rel="stylesheet" href="builder.css" />
     </head>
     <body>
+        <div id="nojs">
+            Please enable JavaScript, you jerk
+        </div>
+        <script>document.getElementById('nojs').style.display = 'none';</script>
         <div class="ribbon">
             <a href="https://github.com/DelvarWorld/Bash-Prompt-Builder" rel="me" target="_blank">Fork me on GitHub!</a>
         </div>
