--- a/index.html
+++ b/index.html
@@ -356,6 +356,9 @@ dvcs_function="
 
     PS1="\$(${dvcs_function})\[$COLOR_RESET\] \$ "
             </div>
+            <button id="expand">Expand</button>
+            <button id="despand">Despand</button>
+            <button id="select">Select (copy it yourself, jerk)</button>
 
         </section>
 
