copy button on floated div

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <section id="options">
                 <button id="float"><span>➦</span> Float</button>
                 <button id="dock"><span>➥</span> Dock</button>
+                <button id="float-select">Select Code (copy it yourself, jerk)</button>
                 <div class="wtf">
                     <div id="placeholder">Hover over an option to see its description here</div>
                     <label id="wtf-label" for="wtf">What the merry-go-round does this option do?</label>
